<resources>
    <string name="app_name">News</string>
   <string name="my_news">My News</string>
   <string name="popular_news">Popular News</string>
    <string name="like_an_article">Like an article</string>
    <string name="share_an_article">Share an article</string>
    <string name="article_image">Article image</string>
    <string name="search">Search</string>
    <string name="search_here">Search here</string>
    <string name="description">Description</string>
    <string name="go_back">Go back</string>
    <string name="visit_site">Visit site</string>
    <string name="favourites">Favourites</string>
    <string name="no_favourites_yes">No favourites yes</string>
    <string name="make_sure">Make sure you have added event’s in this section</string>
</resources>