<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.News.Background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.details.DetailsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/details_image"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:importantForAccessibility="no"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="9dp"
                android:layout_marginBottom="12dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/go_back"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintBottom_toBottomOf="@id/details_image"
                app:layout_constraintStart_toStartOf="@id/details_image"
                app:tint="?android:attr/textColorPrimary" />

            <ImageButton
                android:id="@+id/share_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="15dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/share_an_article"
                android:src="@drawable/ic_share"
                app:layout_constraintBottom_toBottomOf="@id/details_image"
                app:layout_constraintEnd_toEndOf="@id/details_image"
                app:tint="?android:attr/textColorPrimary" />


            <ImageButton
                android:id="@+id/like_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="18dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/like_an_article"
                app:layout_constraintBottom_toBottomOf="@id/share_button"
                app:layout_constraintEnd_toStartOf="@id/share_button"
                app:tint="?android:attr/textColorPrimary" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/article_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="17dp"
        android:layout_marginTop="25dp"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_view"
        tools:text="Musk invited to UK Parliament to discuss $44 billion Twitter buyout" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="13dp"
        android:layout_marginTop="25dp"
        android:text="@string/description"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/article_title" />

    <TextView
        android:id="@+id/article_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="18dp"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description"
        tools:ignore="VisualLintLongText"
        tools:text="Recently, Twitter announced that it has entered into a definitive agreement to be acquired by an entity wholly owned by Musk for $54.20 per share in cash in a transaction valued at nearly $44 billion." />

    <Button
        android:id="@+id/visit_site_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/purple_primary"
        android:text="@string/visit_site"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/article_description" />

</androidx.constraintlayout.widget.ConstraintLayout>