<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.News.Background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="12dp"
    android:foreground="?android:attr/selectableItemBackground">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/article_image"
        android:layout_width="89dp"
        android:layout_height="84dp"
        android:contentDescription="@string/article_image"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/CornerSize10dp"
        tools:src="@tools:sample/avatars" />

    <LinearLayout
        android:id="@+id/article_info"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="11dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/article_image"
        app:layout_constraintTop_toTopOf="@id/article_image">

        <TextView
            android:id="@+id/article_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="12sp"
            tools:text="Thu, Apr 19 · 20.00 Pm" />

        <TextView
            android:id="@+id/article_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="3"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:text="Musk invited to UK Parliament to discuss $44 billion Twitter buyout" />
    </LinearLayout>


    <ImageView
        android:id="@+id/icon_like"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:contentDescription="@string/like_an_article"
        android:src="@drawable/ic_like"
        app:layout_constraintBottom_toBottomOf="@id/article_image"
        app:layout_constraintEnd_toEndOf="@id/icon_share"
        app:layout_constraintStart_toEndOf="@id/article_info"
        app:layout_constraintTop_toTopOf="@id/article_image"
        app:tint="?android:attr/textColorPrimary" />

    <ImageView
        android:id="@+id/icon_share"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:contentDescription="@string/share_an_article"
        android:src="@drawable/ic_share"
        app:layout_constraintBottom_toBottomOf="@id/article_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/icon_like"
        app:layout_constraintTop_toTopOf="@id/article_image"
        app:tint="?android:attr/textColorPrimary" />

</androidx.constraintlayout.widget.ConstraintLayout>