<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.favourites.FavouritesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/favourites_added"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="19dp"
            android:fontFamily="@font/arial_rounded_mt_bold"
            android:text="@string/favourites"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/counter_background"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_marginStart="16dp"
            android:background="@color/purple_primary"
            app:layout_constraintStart_toEndOf="@id/header_text"
            app:layout_constraintTop_toTopOf="@id/header_text"
            app:shapeAppearanceOverlay="@style/CornerSize10dp" />

        <TextView
            android:id="@+id/counter_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/counter_background"
            app:layout_constraintEnd_toEndOf="@id/counter_background"
            app:layout_constraintStart_toStartOf="@id/counter_background"
            app:layout_constraintTop_toTopOf="@id/counter_background"
            tools:text="2" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/news_adapter"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:clipToPadding="false"
            android:paddingBottom="65dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_text"
            tools:itemCount="2"
            tools:listitem="@layout/item_article" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/no_favourites"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/heart_image"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_marginTop="210dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_favourite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?android:attr/textColorSecondary" />

        <TextView
            android:id="@+id/no_favourites_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/no_favourites_yes"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/heart_image" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="58dp"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:text="@string/make_sure"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/no_favourites_text" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>